--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
     "@fortawesome/fontawesome-svg-core": "^6.4.2",
     "@fortawesome/free-solid-svg-icons": "^6.4.2",
     "@fortawesome/react-fontawesome": "^0.2.0",
+    "crypto-js": "^4.1.1",
     "firebase": "^9.20.0",
     "nanoid": "^3.3.6",
     "react": "17.0.2",
