--- a/package.json
+++ b/package.json
@@ -1,9 +1,12 @@
 {
   "name": "project",
   "dependencies": {
+    "@emotion/react": "^11.11.1",
+    "@emotion/styled": "^11.11.0",
     "@fortawesome/fontawesome-svg-core": "^6.4.2",
     "@fortawesome/free-solid-svg-icons": "^6.4.2",
     "@fortawesome/react-fontawesome": "^0.2.0",
+    "@mui/material": "^5.14.4",
     "crypto-js": "^4.1.1",
     "firebase": "^9.20.0",
     "nanoid": "^3.3.6",
